[tool.poetry]
name = "ida-2024-demo"
version = "0.1.0"
description = ""
authors = ["Scolpe <maciejzuziak101@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.9"
numpy = "^1.26.2"
fedata = "0.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
